answer btn with filter on mobile width fix, needs test

--- a/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
@@ -160,13 +160,12 @@
                     line-height: 24px;
                     .giveMeEllipsisOne;
                     max-width: 140px;
-                    padding-left: 6px;
+                    //padding-left: 6px;
                     cursor: pointer;
                 }
 
                 input {
                     display: none;
-
                     &:checked ~ .checkmark {
                         background: @color-blue;
                         opacity: 1;
@@ -186,6 +185,7 @@
                     height: 12px;
                     background: @color-medium-grey;
                     opacity: 0.8;
+                    display: none;
                 }
 
                 .checkmark:after {
@@ -224,7 +224,7 @@
                 }
 
                 .sort-filter {
-                    padding: 4px 8px;
+                    padding: 4px 0;
                     margin: 4px 0;
                     border-bottom: 1px solid @color-grey;
                     border-top: 0;
