--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -41,7 +41,7 @@
         max-width: 400px;
         @media(min-width: (@screen-md)){display: none; }
         @media(max-width: (@screen-md)){  display: block;}
-        @media(max-width: (@screen-xs)){  display: block; margin: 16px 32px 16px 64px;}
+        @media(max-width: (@screen-xs)){  display: block; margin: 16px 32px 16px 64px; max-width: 250px;}
         @media(max-width: (@screen-sm)){  display: block;
         }
         font-size: 20px;
