--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -333,8 +333,11 @@
     }
   }
   .red-counter {
-    top: -7px;
-    right:-7px;
+    //top: -7px;
+    //right:-7px;
+    right: -10px;
+    top: -10px;
+    //test
     @media (max-width: @screen-xs) {
       top: 0px;
     }
@@ -348,7 +351,7 @@
   // height: 22px;
   padding: 0 2px;
   background-color: #d0021b;
-  border: solid 2px @color-white;
+  border: solid 1px @color-white;
   color: @color-white;
   font-size: 14px;
   border-radius: 50%;
